docs: streamline README with clearer value proposition
Simplify the README to focus on what makes SirixDB unique:
- Lead with the core value prop: "the database that remembers everything"
- Highlight key differentiators upfront (versioning, diffing, time-travel)
- Add clear 60-second quickstart with Docker
- Restructure use cases and technical details for scannability
- Remove redundant sections and outdated badges